# nameh-khan

./: .gitignore  README.md
demo/: app.py  sample_scanning.ipynb
evaluation/: evaluation.ipynb  generalization_raw_data_preparation.ipynb  word_level_evaluation.ipynb
fine_tuning/: config.py  data_preparation.ipynb  fine_tuning.ipynb  misc.py  model.py
fine_tuning/models/: best_model_nazanin.pth  best_model_zar.pth
lib/nameh-khan/: pyproject.toml
lib/nameh-khan/nameh_khan/page_reader/: base.py
lib/nameh-khan/nameh_khan/page_reader/plain_text_page/: __init__.py  config.py  model.pth  page.py
lib/nameh-khan/nameh_khan/page_reader/utils/: indexer.py  segmentation.py  text_builder.py
lib/nameh-khan/nameh_khan/pre_process/: __init__.py  _color_space_transformer.py  _normalizer.py
samples/00001/: fulltext_00001.txt  label_00001.csv  label_00001.xlsx  line_00001.xlsx
samples/06975/: fulltext_06975.txt  label_06975.xlsx  line_06975.xlsx
samples/06976/: fulltext_06976.txt  label_06976.xlsx  line_06976.xlsx
samples/06977/: fulltext_06977.txt  label_06977.xlsx  line_06977.xlsx
samples/06978/: fulltext_06978.txt  label_06978.xlsx  line_06978.xlsx
samples/06979/: fulltext_06979.txt  label_06979.xlsx  line_06979.xlsx
samples/06980/: fulltext_06980.txt  label_06980.xlsx  line_06980.xlsx
samples/06981/: fulltext_06981.txt  label_06981.xlsx  line_06981.xlsx
samples/06982/: fulltext_06982.txt  label_06982.xlsx  line_06982.xlsx
samples/06983/: fulltext_06983.txt  label_06983.xlsx
training/: data_preparation.ipynb  training.ipynb
(+147 files in other folders)
