[tool.poetry]
name = "nameh-khan"
version = "0.1.0"
description = "Packge for scanning official letters."
authors = ["amirhosseini1997ah@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
