[tool.poetry]
name = "nameh-khan"
version = "0.1.0"
description = "Packge for scanning official letters."
authors = ["amirhosseini1997ah@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
torch = ">=2.4.0"
opencv-python = "^4.10.0.84"
jupyter = "^1.1.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.5.1"
torchvision = ">=0.19.0"
matplotlib = "^3.9.2"
jiwer = "^3.0.4"
gradio = "^5.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
